--- a/src/main.scss
+++ b/src/main.scss
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat:200,300,400|Raleway:100,200,300,400&display=swap&subset=latin-ext');
 $dark-blue: #1b2a49;
 $grey-blue: #465881;
 $light-blue: #00909e;
@@ -25,8 +26,6 @@ section,
 }
 
 canvas {
-    height: 100%;
-    min-height: 100%;
     display: block;
     vertical-align: bottom;
     z-index: 1;
@@ -80,6 +79,21 @@ body {
     }
 }
 
+@keyframes float {
+    0% {
+        box-shadow: 0 5px 15px 0px rgba(0, 0, 0, 0.8);
+        transform: translatey(0px);
+    }
+    50% {
+        box-shadow: 0 25px 15px 0px rgba(0, 0, 0, 0.2);
+        transform: translatey(-10px);
+    }
+    100% {
+        box-shadow: 0 5px 15px 0px rgba(0, 0, 0, 0.8);
+        transform: translatey(0px);
+    }
+}
+
 .Navbar {
     position: fixed;
     top: 0;
@@ -106,4 +120,58 @@ body {
     transition: 1s;
 }
 
-.AboutMe {}
+.AboutMe {
+    background: #ffffff27;
+    z-index: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.title {
+    font-family: 'Raleway';
+    font-weight: 300;
+    font-size: 3em;
+}
+
+.paragraph {
+    font-family: 'Montserrat';
+    font-weight: 300;
+    font-size: 1em;
+    margin: 0 10% 3% 10%;
+}
+
+.cardSpace {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+}
+
+.card {
+    background: white;
+    width: 450px;
+    margin: 1% 0 1% 0;
+    border-radius: 10%;
+    padding: 1%;
+    animation-name: float;
+    animation-duration: 5s;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out;
+}
+
+.cardTitle {
+    font-family: 'Raleway';
+    font-weight: 300;
+    font-size: 2em;
+}
+
+.cardDesc {
+    font-family: 'Montserrat';
+    font-weight: 300;
+    font-size: 1em;
+    margin: 4% 10% 4% 10%;
+}
+
+.cardImg {
+    width: 100%;
+}
