--- a/src/main.scss
+++ b/src/main.scss
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:200,300,400|Raleway:100,200,300,400&display=swap&subset=latin-ext');
+@import url('https://fonts.googleapis.com/css?family=Rubik:700&display=swap');
+@import url('https://kit.fontawesome.com/4a1d8beb77.js');
 $dark-blue: #1b2a49;
 $grey-blue: #465881;
 $light-blue: #00909e;
@@ -126,6 +128,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
 }
 
 .title {
@@ -175,3 +178,163 @@ body {
 .cardImg {
     width: 100%;
 }
+
+.Games {
+    background: #ffffff27;
+    z-index: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.GamesInfo {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.ProjectInfo {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    width: 40%;
+    height: 500px;
+    padding: 1%;
+}
+
+.simpleButton {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 70px;
+    width: 235px;
+    border-radius: 5px;
+    background-color: #4292FF;
+    box-shadow: 0 2px #256dcf;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.simpleButton a {
+    color: #fff;
+    font-size: 1.2em;
+}
+
+.facebook {
+    background-color: #3b5998;
+}
+
+.twitter {
+    background-color: #55acee;
+}
+
+.google {
+    background-color: #dd4b39;
+}
+
+
+/* Start Half-colored Social Media */
+
+.half-colored {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    font-family: arial;
+}
+
+.half-colored ul li {
+    list-style: none;
+    float: left;
+    margin: 15px;
+    width: 75px;
+    height: 75px;
+    border-radius: 75%;
+    line-height: 75px;
+    text-align: center;
+    font-size: 40px;
+    background-color: #FFF;
+    overflow: hidden;
+    color: #000;
+    position: relative;
+    transition: all .5s ease-in-out;
+    transform: rotate(45deg);
+    z-index: 1;
+    cursor: pointer;
+}
+
+.half-colored ul li .fab {
+    transform: rotate(-45deg);
+    transition: all .5s ease-in-out;
+    color: #262626;
+}
+
+.half-colored ul li:hover .fab {
+    color: #FFF;
+}
+
+.half-colored ul li .fas {
+    transform: rotate(-45deg);
+    transition: all .5s ease-in-out;
+    color: #262626;
+}
+
+.half-colored ul li:hover .fas {
+    color: #FFF;
+}
+
+.half-colored ul li:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 50%;
+    height: 100%;
+    transition: all .5s ease-in-out;
+    z-index: -1;
+}
+
+.half-colored ul li:nth-child(1):before {
+    background-color: #7d1c8a;
+}
+
+.half-colored ul li:nth-child(3):before {
+    background-color: #55acee;
+}
+
+.half-colored ul li:nth-child(2):before {
+    background-color: #dd4b39;
+}
+
+.half-colored ul li:after {
+    content: '';
+    position: absolute;
+    top: 100%;
+    right: 0;
+    background-color: #dd4b39;
+    width: 100%;
+    height: 100%;
+    transition: all .5s ease-in-out;
+    z-index: -2;
+    opacity: .9;
+}
+
+.half-colored ul li:nth-child(1):after {
+    background-color: #7d1c8a;
+}
+
+.half-colored ul li:nth-child(2):after {
+    background-color: #dd4b39;
+}
+
+.half-colored ul li:nth-child(3):after {
+    background-color: #55acee;
+}
+
+.half-colored ul li:hover:after {
+    top: 0;
+}
+
+
+/* End Half-colored Social Media */
